--- a/src/UI/Manager.xaml
+++ b/src/UI/Manager.xaml
@@ -6,8 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:SourceGit.UI"
     xmlns:git="clr-namespace:SourceGit.Git"
+    xmlns:converters="clr-namespace:SourceGit.Converters"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <converters:IntToRepoColor x:Key="IntToRepoColor"/>
+        <converters:BoolToCollapsed x:Key="BoolToCollapsed"/>
+    </UserControl.Resources>
+    
     <Grid>        
         <!-- Main Body -->
         <Grid>
@@ -48,11 +55,27 @@
                     
                     <ListView.ItemTemplate>
                         <DataTemplate DataType="{x:Type git:Repository}">
-                            <StackPanel Orientation="Horizontal" Height="24">
-                                <Path Height="12" Margin="16,0,0,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}"/>
-                                <TextBlock Margin="4,0" Text="{Binding Name}" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG}"/>
-                                <TextBlock FontSize="10" Text="{Binding Path}" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG2}"/>
-                            </StackPanel>
+                            <Grid Height="24">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Path Grid.Column="0" Width="12" Margin="16,0,0,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Git}"/>
+
+                                <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                    <TextBlock Margin="4,0" Text="{Binding Name}" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG}"/>
+                                    <TextBlock FontSize="10" Text="{Binding Path}" VerticalAlignment="Center" Foreground="{StaticResource Brush.FG2}"/>
+                                </StackPanel>
+
+                                <Path
+                                    Grid.Column="2" 
+                                    Width="12" Height="12" Margin="4,0" 
+                                    Style="{StaticResource Style.Icon}" 
+                                    Data="{StaticResource Icon.Bookmark}"
+                                    Fill="{Binding Color, Converter={StaticResource IntToRepoColor}}"/>
+                            </Grid>                            
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
@@ -71,7 +94,7 @@
                         <Path Width="14" Height="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Pull}" Opacity=".8"/>
                     </Button>
 
-                    <Button Grid.Column="2" Click="OpenOrAddRepo" Style="{StaticResource Style.Button}" Margin="8,0,2,0"  ToolTip="Open Local Repository">
+                    <Button Grid.Column="2" Click="OpenOrAddRepo" Style="{StaticResource Style.Button}" Margin="8,0,4,0"  ToolTip="Open Local Repository">
                         <Path Width="14" Height="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder.Open}" Opacity=".8"/>
                     </Button>
                 </Grid>
@@ -82,6 +105,7 @@
                     Padding="0"
                     AllowDrop="True"
                     ContextMenuOpening="TreeContextMenuOpening"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                     Drop="TreeDrop" 
                     GotFocus="TreeGotFocus" 
                     MouseMove="TreeMouseMove">
@@ -105,12 +129,44 @@
                         <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                             <Grid Height="26">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="16"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
-                                <Path x:Name="icon" Grid.Column="0" Width="14" Height="14" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Folder.Fill}"/>
-                                <TextBlock x:Name="name" Grid.Column="1" Margin="4,0,0,0" Text="{Binding Name}" Foreground="{StaticResource Brush.FG}" VerticalAlignment="Center"/>
-                                <TextBox x:Name="editName" Grid.Column="1" Margin="4,0,0,0" Text="{Binding Name}" Loaded="TreeNodeRenameStart" KeyDown="TreeNodeRenameKeyDown" LostFocus="TreeNodeRenameEnd"/>
+                                
+                                <Path 
+                                    x:Name="icon" 
+                                    Grid.Column="0" 
+                                    Width="14" Height="14" 
+                                    Style="{StaticResource Style.Icon}" 
+                                    Data="{StaticResource Icon.Folder.Fill}"/>
+                                
+                                <TextBlock 
+                                    x:Name="name" 
+                                    Grid.Column="1" 
+                                    Margin="4,0,0,0" 
+                                    Text="{Binding Name}" 
+                                    Foreground="{StaticResource Brush.FG}" 
+                                    VerticalAlignment="Center"/>
+                                
+                                <TextBox 
+                                    x:Name="editName" 
+                                    Grid.Column="1" 
+                                    Margin="4,0,0,0" 
+                                    Text="{Binding Name}" 
+                                    Loaded="TreeNodeRenameStart" 
+                                    KeyDown="TreeNodeRenameKeyDown" 
+                                    LostFocus="TreeNodeRenameEnd"/>
+
+                                <Path 
+                                    x:Name="bookmark" 
+                                    Grid.Column="2" 
+                                    Width="14" Height="14" 
+                                    Margin="4,0"
+                                    Style="{StaticResource Style.Icon}" 
+                                    Data="{StaticResource Icon.Bookmark}" 
+                                    Fill="{Binding Color, Converter={StaticResource IntToRepoColor}}" 
+                                    Visibility="{Binding IsRepo, Converter={StaticResource BoolToCollapsed}}"/>
                             </Grid>
 
                             <HierarchicalDataTemplate.Triggers>
