style<InteractiveRebase>: add margin for committer name column

--- a/src/UI/InteractiveRebase.xaml
+++ b/src/UI/InteractiveRebase.xaml
@@ -178,6 +178,7 @@
                                 Grid.Column="2"
                                 Foreground="{StaticResource Brush.FG}"
                                 VerticalAlignment="Center"
+                                Margin="8,0"
                                 Text="{Binding Commit.Committer.Name}"/>
 
                             <TextBlock
